--- a/1. Intro to Node.js/1-node-farm/final/package.json
+++ b/1. Intro to Node.js/1-node-farm/final/package.json
@@ -9,9 +9,6 @@
   "author": "Jonas Schmedtmann",
   "license": "ISC",
   "dependencies": {
-    "slugify": "~1.3.4"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.11"
+    "slugify": "^1.6.6"
   }
 }
