--- a/7. MongoDB with Mongoose/starter-after-section-06/config.env
+++ b/7. MongoDB with Mongoose/starter-after-section-06/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=3000
-# USERNAME=adityanair1207
+DATABASE=mongodb+srv://adityanair1207:<PASSWORD>@cluster0.6d8jv.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_PASSWORD=Y07ub9w50bOEeADl
