--- a/7. MongoDB with Mongoose/after-section-08/config.env
+++ b/7. MongoDB with Mongoose/after-section-08/config.env
@@ -1,5 +1,4 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/natours?retryWrites=true
-DATABASE_LOCAL=mongodb://localhost:27017/natours
-DATABASE_PASSWORD=On0adDgBCE5ECWh6
+DATABASE=mongodb+srv://adityanair1207:<PASSWORD>@cluster0.6d8jv.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_PASSWORD=Y07ub9w50bOEeADl
